--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
     font-family: "IBM Plex Mono";
     margin: 0;
     padding: 8px;
+    overflow-x: hidden;
+    background: #151515;
+    color: #e8e6e3;
 }
 
 #title {
@@ -18,6 +21,8 @@ body {
 
 button, input {
     font-family: "IBM Plex Mono";
+    color: #e8e6e3;
+    background: none;
 }
 
 button {
@@ -35,7 +40,7 @@ button {
     max-width: 70vw;
     border: solid 1px #777;
     border-radius: 4px;
-    margin-right: -16px;
+    margin-right: -32px;
 }
 
 #task-area {
@@ -110,7 +115,7 @@ button {
     border: none;
     background: none;
     position: relative;
-    left: -20px;
+    left: -4px;
     top: 2px;
     border: none;
     outline: none;
