--- a/mobile.css
+++ b/mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 832px){
+@media only screen and (max-width: 465px){
     #task-area {
         flex-direction: column;
     }
@@ -9,5 +9,6 @@
 
     #title {
         font-size: 300%;
+        margin-top: 16px;
     }
 }
