--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "IBM Plex Mono"; 
+    font-family: "IBM Plex Mono";
     src: url("fonts/IBMPlexMono-Medium.ttf") format("truetype");
 }
 
@@ -17,6 +17,18 @@ body {
     font-size: 500%;
     text-align: center;
     user-select: none;
+    margin-bottom: 16px;
+}
+
+#title-mango {
+    background: linear-gradient(45deg, #fc8d0f, #67a700);
+    background-clip: text;
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
 }
 
 button, input {
@@ -26,7 +38,7 @@ button, input {
 }
 
 button {
-    user-select: none;    
+    user-select: none;
 }
 
 #new-task-container {
@@ -36,25 +48,25 @@ button {
 
 #task-input {
     padding: 8px;
-    width: 300px;
-    max-width: 70vw;
+    width: 400px;
+    max-width: calc(100% - 32px);
     border: solid 1px #777;
     border-radius: 4px;
-    margin-right: -32px;
+    margin-right: -38px;
+    font-size: 120%;
 }
 
 #task-area {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     max-width: 816px;
     margin: 0 auto;
-    margin-top: 30px;
+    margin-top: 16px;
 }
 
 .task-group {
     border: 1px gray solid;
     border-radius: 4px;
-    width: 50%;
     margin: 8px;
     padding: 16px;
 }
@@ -90,7 +102,7 @@ button {
     cursor: pointer;
 }
 
-.task-group input[type="checkbox"]:checked + p {
+.task-group input[type="checkbox"]:checked+p {
     color: gray;
     text-decoration: line-through;
 }
@@ -107,7 +119,7 @@ button {
     margin-left: 14px;
 }
 
-.task-group li p:hover + button {
+.task-group li p:hover+button {
     display: block;
 }
 
@@ -115,7 +127,7 @@ button {
     border: none;
     background: none;
     position: relative;
-    left: -4px;
+    left: -2px;
     top: 2px;
     border: none;
     outline: none;
