--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ button, input {
     font-family: "IBM Plex Mono";
     color: #e8e6e3;
     background: none;
+    cursor: pointer;
 }
 
 button {
@@ -44,6 +45,9 @@ button {
 #new-task-container {
     display: flex;
     justify-content: center;
+    position: sticky;
+    top: 32px;
+    z-index: 5;
 }
 
 #task-input {
@@ -52,8 +56,22 @@ button {
     max-width: calc(100% - 32px);
     border: solid 1px #777;
     border-radius: 4px;
-    margin-right: -38px;
+    margin-right: -36px;
     font-size: 120%;
+    background: #1a1a1a;
+    box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 2px 2px 7px 1px rgba(0, 0, 0, 0.75);
+    outline: none;
+    transition: all 150ms ease;
+}
+
+#task-input:focus {
+    border-color: #aaa;
+    background: #252525;
+    box-shadow: 4px 4px 19px 1px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 4px 4px 19px 1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 4px 4px 19px 1px rgba(0, 0, 0, 0.75);
 }
 
 #task-area {
@@ -70,6 +88,7 @@ button {
     margin: 8px;
     padding: 16px;
     transition: background-color 100ms linear;
+    cursor: pointer;
 }
 
 .task-group li {
@@ -134,6 +153,8 @@ button {
     background: none;
     border: none;
     outline: none;
+    position: relative;
+    left: -2px;
 }
 
 #sign-in {
