--- a/style.css
+++ b/style.css
@@ -3,13 +3,22 @@
     src: url("fonts/IBMPlexMono-Medium.ttf") format("truetype");
 }
 
-body {
+body, html {
     font-family: "IBM Plex Mono";
     margin: 0;
     padding: 8px;
     overflow-x: hidden;
     background: #151515;
     color: #e8e6e3;
+  height: 100%;
+  min-height:100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+html {
+  padding: 0;
 }
 
 #title {
@@ -202,4 +211,22 @@ button {
 .hint-add-task {
     user-select: none;
     color: #999;
+}
+
+main {
+  flex-grow: 1;
+}
+
+footer {
+  display: flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  gap: 16px;
+  padding: 16px;
+}
+
+footer p {
+  margin: 0;
+  opacity: 0.8;
 }
